# sekirei-lang

./: .gitignore  Cargo.toml  README.md  build.rs
src/: lib.rs
src/asm/: entry.s  primitives.s
src/compiler/: main.rs
src/compiler/codegen/: irgen.rs  mod.rs
src/compiler/lexer/: mod.rs
src/compiler/parser/: mod.rs
src/compiler/sema/: mod.rs
src/manifest/: mod.rs
src/runtime/core/: runtime.c  runtime.h
src/runtime/gc/: gc.c  gc.h
src/runtime/memory/: allocator.c  allocator.h
src/skp/: main.rs
src/stdlib/collections/: collections.cpp  collections.hpp
src/stdlib/io/: io.cpp  io.hpp
src/stdlib/math/: math.cpp  math.hpp
src/stdlib/string/: string.cpp  string.hpp
